objects/HealthCloudGA__CarePlanTemplate__c.object
<CustomObject>
    <fields>
        <fullName>HealthCloudGA__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Home Health</fullName>
                </value>
                <value>
                    <fullName>Endocrinology and Metabolism</fullName>
                </value>
                <value>
                    <fullName>Wellness</fullName>
                </value>
                <value>
                    <fullName>Disease Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ClonedFrom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cloned From</label>
        <referenceTo>HealthCloudGA__CarePlanTemplate__c</referenceTo>
        <relationshipLabel>Care Plan Templates</relationshipLabel>
        <relationshipName>CarePlanTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <label>Care Plan Template</label>
    <listViews>
        <fullName>HealthCloudGA__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Care Plan Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Care Plan Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>